Upgrade to Rails 5.1.2

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,7 +4,7 @@ html
     meta charset='utf-8'
     title Browser Push Notifications
     meta content='width=device-width, initial-scale=1' name='viewport'
-    meta content="Browser push notifications demo using Rails 4.2.7.2 and Ruby 2.3.4" name='description'
+    meta content="Browser push notifications demo using SSE, Rails 5.1.2, and Ruby 2.3.4" name='description'
     meta content='ie=edge' http-equiv='x-ua-compatible'
     = csrf_meta_tags
     = stylesheet_link_tag 'application'
